# coulomb-golf

./: CMakeLists.txt  README.md  conanfile.txt
configured_files/: config.hpp.in
doc/: game-design-document.adoc
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
